# pycea

./: .gitignore  README.md  pyproject.toml  setup.py  test_al_direct.py
docs/: CEA_README.md
examples/: README.md  cea_examples.py
pycea/streamlit/pages/: mixture.py
src/pycea/: PyPep.py  __init__.py
src/pycea/core/: __init__.py  combustion_equilibrium.py  constants.py  pycea.py  rocket_cea.py
src/pycea/data/: thermo.yaml
tests/: test_cea_package.py
