# pyproject.toml  (place this in the project root: C:\PWr in Space\Programming\Python\PyPep)

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycea"                  # Required
version = "0.1.01"               # Required
description = "Chemical Equilibrium Analysis for Rocket Propulsion"
requires-python = ">=3.9"        # Recommended
authors = [{name = "Sebastian Król", email = "sebastiankrol@zsleji.pl"}]
dependencies = [
    "numpy",
    "scipy",
    "Rocketry_formulas @ git+https://github.com/Clopeq/Rocketry_formulas.git"
]

# Optional but good to have
readme = "README.md"
license = {text = "MIT"}

# This tells setuptools where to find the package (critical for src layout!)
[tool.setuptools.packages.find]
where = ["src"]

# Or equivalently (more explicit):
# [tool.setuptools.packages]
# find = {where = ["src"]}
